--- a/009-spring-cloud-gateway-loadbancer-eureka-feign-client/usk-gateway/src/main/resources/application.yml
+++ b/009-spring-cloud-gateway-loadbancer-eureka-feign-client/usk-gateway/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   cloud:
     gateway:
       routes:
-      - id: user
+      - id: order
         uri: lb://order-service
         predicates:
         - Path=/order/**
